--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,6 +7,7 @@ body,
 body {
   font-family: fantasy, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0px;
+  background-color: antiquewhite;
 }
 
 img {
@@ -28,12 +29,13 @@ Button
 
 .btn {
   display: inline-block;
+  font-family: fantasy, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   padding: 10px 20px;
   border-color: #014041;
   border-width: 1px 1px 3px;
   border-radius: 4px;
-  background-color: #00acb0;
-  color: #f8f8f8;
+  background-color: #46b8b8;
+  color: antiquewhite;
   font-size: 1.1rem;
   outline: 0;
   cursor: pointer;
@@ -101,7 +103,7 @@ Form Treatment
   max-width: 100%;
   padding: 25px;
   margin: 0 auto 20px;
-  background-color: #efefef;
+  background-color: #c9c2c2;
   border-radius: 3px;
   box-shadow: 0 1px 2px rgb(0, 0, 0, 0.4);
 }
