Made the nav bar fixed as the user scrolls up and down on the browser

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -7,6 +7,15 @@
   margin: 0 0 30px;
   background-color: #00acb0;
   overflow: hidden;
+
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+}
+
+body {
+  padding-top: 60px;
 }
 
 .nav a {
