--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,6 +2,8 @@ html,
 body,
 #react-root {
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -20,7 +22,9 @@ Container
 -------------------------------------------------------------------------------- */
 
 .container {
-  padding: 20px;
+  padding-right: 60px;
+  padding-left: 20px;
+  margin-bottom: 50px;
 }
 
 /* --------------------------------------------------------------------------------
