Adjusted and refactored

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -17,9 +17,9 @@ img {
   max-width: 100%;
 }
 
-/* --------------------------------------------------------------------------------
+/* -----------------------------------------------------------------------------
 Container
--------------------------------------------------------------------------------- */
+--------------------------------------------------------------------------------*/
 
 .container {
   padding-right: 60px;
@@ -27,9 +27,9 @@ Container
   margin-bottom: 50px;
 }
 
-/* --------------------------------------------------------------------------------
+/* -----------------------------------------------------------------------------
 Button
--------------------------------------------------------------------------------- */
+--------------------------------------------------------------------------------*/
 
 .btn {
   display: inline-block;
@@ -66,6 +66,7 @@ Button
 }
 
 /* This line makes the "Register" and "Login" buttons look like links */
+/* Not using these designs since I am designing the buttons with MUI. */
 .btn_asLink {
   padding: 0;
   border-width: 0;
