--- a/src/components/FeedbackPage/FeedbackColor/FeedbackColor.css
+++ b/src/components/FeedbackPage/FeedbackColor/FeedbackColor.css
@@ -1,5 +1,5 @@
 input[type='range'] {
-	-webkit-appearance: none;
+	appearance: none;
 	height: 10px;
     background: rgb(51,121,9);
     background: linear-gradient(90deg, rgba(51,121,9,1) 0%, 
@@ -8,7 +8,7 @@ input[type='range'] {
 }
 
 input[type='range']::-webkit-slider-thumb {
-	-webkit-appearance: none;
+	appearance: none;
 	height: 30px;
 	width: 10px;
 	border-radius: 50%;
@@ -18,7 +18,7 @@ input[type='range']::-webkit-slider-thumb {
 }
 
 input[type='range']::-webkit-slider-runnable-track {
-	-webkit-appearance: none;
+	appearance: none;
 	box-shadow: none;
 	border: none;
 	background: linear-gradient(90deg, rgba(51,121,9,1) 0%, 
